# controllers/user.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/ngirimana/AnnounceIT/helpers"
 	"github.com/ngirimana/AnnounceIT/models"
 )
 
@@ -36,4 +37,39 @@ func SignUp(context *gin.Context) {
 	user.Password = ""
 	context.JSON(http.StatusCreated, gin.H{"message": "User created successfully", "user": user})
 
+}
+
+// Login godoc
+// @Summary Login a user
+// @Description Authenticate a user and return a JWT token
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param user body utils.LoginData true "User login credentials"
+// @Success 200 {object} utils.LoginSuccessResponse "User logged in successfully with JWT token"
+// @Failure 400 {object} utils.ErrorResponse "Bad Request - could not parse the request or generate token"
+// @Failure 401 {object} utils.ErrorResponse "Unauthorized - invalid credentials"
+// @Failure 500 {object} utils.ErrorResponse "Internal Server Error - server error"
+// @Router /users/login [post]
+func Login(context *gin.Context) {
+	var user models.User
+	err := context.ShouldBindJSON(&user)
+
+	if err != nil {
+		context.JSON(http.StatusBadRequest, gin.H{"error": "could not parse the request"})
+		return
+	}
+
+	err = user.Authenticate()
+	if err != nil {
+		context.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid credentials"})
+		return
+	}
+	jwt, err := helpers.GenerateToken(user.Email, user.ID)
+	if err != nil {
+		context.JSON(http.StatusBadRequest, gin.H{"error": "could not generate token"})
+		return
+	}
+	user.Password = ""
+	context.JSON(http.StatusOK, gin.H{"message": "User logged in successfully with JWT token", "jwt": jwt, "user": user})
 }
