# utils/responses.go
@@ -4,9 +4,19 @@ import "github.com/ngirimana/AnnounceIT/models"
 
 type SignUpSuccessResponse struct {
 	Message string      `json:"message"` // The success message
-	Data    models.User `json:"data"`    // The user data
+	Data    models.User `json:"user"`    // The user data
 }
 
 type ErrorResponse struct {
 	Error string `json:"error"` // The error message
+}
+
+type LoginSuccessResponse struct {
+	Token   string `json:"token"`
+	Message string `json:"message"`
+}
+
+type LoginData struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
 }
